--- a/AdminWeb/Areas/Admin/Views/Shared/_SidebarPartial.cshtml
+++ b/AdminWeb/Areas/Admin/Views/Shared/_SidebarPartial.cshtml
@@ -97,7 +97,7 @@
 
             <li>
                 <a asp-action="Index" asp-controller="Shipper">
-                    <i class="fa fa-truck"></i> <span class="nav-label">Yêu cầu Shipper</span>
+                    <i class="fa fa-truck"></i> <span class="nav-label">Xác thực người giao hàng</span>
                 </a>
             </li>
             <!--End Sidebar-->
